# cpp_pool_allocator

./: CMakeLists.txt  CMakePresets.json  Chunk.hpp  Object.hpp  PoolAllocator.cpp  PoolAllocator.hpp  README.md  main.cpp  tests.cpp
src/: Chunk.hpp  Object.hpp  PoolAllocator.cpp  PoolAllocator.hpp
